--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Flashcard</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
     <main>
         <section id="container">
+            <!-- primeira <pergunta-->
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
@@ -40,7 +42,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Rupia indonésia</p> 
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>biologia 1</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -49,7 +52,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>é uma ciência que faz parte da biologia. Ela tem como objetivo compreender a transmissão das características dos seres vivos para seus descendentes,</p> 
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>biología</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -58,6 +62,7 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Sucessão ecológica é a sequência de comunidades, desde a colonização até à comunidade clímax, de um determinado ecossistema. </p> 
                     </div>
+                </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>química</h3>
@@ -67,7 +72,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>O estado de oxidação, também chamado de número de oxidação, é uma abordagem para atribuir o valor da carga que um átomo em uma substância possui.  </p> 
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>sociologia</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -76,7 +82,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Karl Marx foi um filósofo, economista, historiador, sociólogo, teórico político, jornalista, e revolucionário socialista alemão. </p> 
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>ingles</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -85,7 +92,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>tuesday</p> 
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>matemática 1</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -94,7 +102,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>é a legislação trabalhista que apresenta as regras para uma relação de vínculo empregatício. <p>
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>história</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -103,7 +112,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Adolf Hitler, foi um político alemão que serviu como líder do Partido Nazista, Chanceler do Reich e Führer da Alemanha Nazista de 1934 até 1945.  </p>
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>fisica</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -112,6 +122,7 @@
                     <div class="cartao__conteudo__resposta">
                         <p>força exercida por um fluido sobre um objeto mergulhado total ou parcialmente nele. </p>
                     </div>
+                </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>geografia</h3>
@@ -121,7 +132,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>recursos naturais ou artificiais utilizados pela sociedade para produção de algum tipo de energia. </p>
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -133,7 +145,7 @@
                     </div>
                 </div>
             </article>
-            <article class="cartao"></article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -153,7 +165,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>é aquele que tem como principais características defender uma ideia, hipótese, teoria ou opinião. T</p>
                     </div>
-            <article class="cartao"></article>
+                </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>matemática</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -162,6 +175,7 @@
                     <div class="cartao__conteudo__resposta">
                         <p>significa, em geometria, o lado de um triângulo retângulo, oposto ao ângulo reto.</p>
                     </div>
+                </article>
         </section>
     </main>
     <footer>
