--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <section id="container">
             <!-- primeira <pergunta-->
-            <article class="cartao">
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -21,8 +21,8 @@
                         <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
+            </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>projeto vida</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -32,8 +32,8 @@
                         <p>a vida é uma maravilha</p> 
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
+            </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>ed. financeira</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -42,8 +42,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Rupia indonésia</p> 
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>biologia 1</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -52,8 +52,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>é uma ciência que faz parte da biologia. Ela tem como objetivo compreender a transmissão das características dos seres vivos para seus descendentes,</p> 
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>biología</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -62,8 +62,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Sucessão ecológica é a sequência de comunidades, desde a colonização até à comunidade clímax, de um determinado ecossistema. </p> 
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>química</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -72,8 +72,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>O estado de oxidação, também chamado de número de oxidação, é uma abordagem para atribuir o valor da carga que um átomo em uma substância possui.  </p> 
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>sociologia</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -82,8 +82,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Karl Marx foi um filósofo, economista, historiador, sociólogo, teórico político, jornalista, e revolucionário socialista alemão. </p> 
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>ingles</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -92,8 +92,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>tuesday</p> 
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>matemática 1</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -102,8 +102,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>é a legislação trabalhista que apresenta as regras para uma relação de vínculo empregatício. <p>
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>história</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -112,8 +112,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>Adolf Hitler, foi um político alemão que serviu como líder do Partido Nazista, Chanceler do Reich e Führer da Alemanha Nazista de 1934 até 1945.  </p>
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>fisica</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -122,8 +122,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>força exercida por um fluido sobre um objeto mergulhado total ou parcialmente nele. </p>
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>geografia</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -132,8 +132,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>recursos naturais ou artificiais utilizados pela sociedade para produção de algum tipo de energia. </p>
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -144,8 +144,8 @@
                         <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
+            </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -155,8 +155,8 @@
                         <p>O CSS é uma lingugem de estilização</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
+            </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>português</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -165,8 +165,8 @@
                     <div class="cartao__conteudo__resposta">
                         <p>é aquele que tem como principais características defender uma ideia, hipótese, teoria ou opinião. T</p>
                     </div>
-                </article>
-            <article class="cartao">
+                </article!-->
+            <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>matemática</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -175,9 +175,10 @@
                     <div class="cartao__conteudo__resposta">
                         <p>significa, em geometria, o lado de um triângulo retângulo, oposto ao ângulo reto.</p>
                     </div>
-                </article>
+                </article-->
         </section>
     </main>
+    <script></script>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>    
