--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section id="container">
-            <!-- primeira <pergunta-->
+            <!-- primeira pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
@@ -22,6 +22,7 @@
                     </div>
                 </div>
             </article!-->
+              <!-- segunda pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>projeto vida</h3>
@@ -33,6 +34,7 @@
                     </div>
                 </div>
             </article!-->
+             <!-- terceira pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>ed. financeira</h3>
@@ -43,6 +45,7 @@
                         <p>Rupia indonésia</p> 
                     </div>
                 </article!-->
+                  <!-- quarta pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>biologia 1</h3>
@@ -53,6 +56,7 @@
                         <p>é uma ciência que faz parte da biologia. Ela tem como objetivo compreender a transmissão das características dos seres vivos para seus descendentes,</p> 
                     </div>
                 </article!-->
+                 <!-- quinta pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>biología</h3>
@@ -63,6 +67,7 @@
                         <p>Sucessão ecológica é a sequência de comunidades, desde a colonização até à comunidade clímax, de um determinado ecossistema. </p> 
                     </div>
                 </article!-->
+                <!-- sexta pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>química</h3>
@@ -73,6 +78,7 @@
                         <p>O estado de oxidação, também chamado de número de oxidação, é uma abordagem para atribuir o valor da carga que um átomo em uma substância possui.  </p> 
                     </div>
                 </article!-->
+                <!-- setima pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>sociologia</h3>
@@ -83,6 +89,7 @@
                         <p>Karl Marx foi um filósofo, economista, historiador, sociólogo, teórico político, jornalista, e revolucionário socialista alemão. </p> 
                     </div>
                 </article!-->
+                 <!-- oitava pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>ingles</h3>
@@ -93,6 +100,7 @@
                         <p>tuesday</p> 
                     </div>
                 </article!-->
+                 <!-- nona pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>matemática 1</h3>
@@ -103,6 +111,7 @@
                         <p>é a legislação trabalhista que apresenta as regras para uma relação de vínculo empregatício. <p>
                     </div>
                 </article!-->
+                <!-- decima pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>história</h3>
@@ -113,6 +122,7 @@
                         <p>Adolf Hitler, foi um político alemão que serviu como líder do Partido Nazista, Chanceler do Reich e Führer da Alemanha Nazista de 1934 até 1945.  </p>
                     </div>
                 </article!-->
+                <!-- decima primeira pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>fisica</h3>
@@ -123,6 +133,7 @@
                         <p>força exercida por um fluido sobre um objeto mergulhado total ou parcialmente nele. </p>
                     </div>
                 </article!-->
+                  <!-- decima segunda pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>geografia</h3>
@@ -133,6 +144,7 @@
                         <p>recursos naturais ou artificiais utilizados pela sociedade para produção de algum tipo de energia. </p>
                     </div>
                 </article!-->
+                 <!-- decima terceira pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
@@ -145,6 +157,7 @@
                     </div>
                 </div>
             </article!-->
+            <!-- decima quarta pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>programação</h3>
@@ -156,6 +169,7 @@
                     </div>
                 </div>
             </article!-->
+             <!-- decima quinta pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>português</h3>
@@ -166,6 +180,7 @@
                         <p>é aquele que tem como principais características defender uma ideia, hipótese, teoria ou opinião. T</p>
                     </div>
                 </article!-->
+                 <!-- decima sexta pergunta-->
             <!--article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>matemática</h3>
