--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
     <script></script>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
-    </footer>    
+    </footer>  
+    <script src="app.js"></script> 
+    <script src="perguntas.js"></script> 
 </body>
 </html>
