--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </main>
     <script></script>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido por Rafael Deitos</p>
     </footer>  
     <script src="app.js"></script> 
     <script src="perguntas.js"></script> 
